--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "build": "rm -rf dist && tsc && rollup -c",
+    "gen:proto": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./src/generated --ts_proto_opt=esModuleInterop=true,outputServices=false,oneof=unions,forceLong=bigint,useOptionals=messages,outputJsonMethods=false,outputEncodeMethods=true ./src/proto/wal.proto",
     "prepublishOnly": "npm run build",
     "test": "vitest run",
     "lint": "eslint \"src/**/*.ts\""
@@ -42,8 +43,13 @@
     "globals": "^17.1.0",
     "rollup": "^4.56.0",
     "ts-node": "^10.9.0",
+    "ts-proto": "^2.11.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.53.1",
     "vitest": "^4.0.18"
+  },
+  "dependencies": {
+    "long": "^5.3.2",
+    "protobufjs": "^8.0.0"
   }
 }
