--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^20.19.30",
-    "eslint": "^8.57.1",
+    "eslint": "^9.39.2",
     "globals": "^17.1.0",
     "rollup": "^4.56.0",
     "ts-node": "^10.9.0",
@@ -50,6 +51,7 @@
   },
   "dependencies": {
     "long": "^5.3.2",
+    "luxon": "^3.7.2",
     "protobufjs": "^8.0.0"
   }
 }
